# mic-to-speaker-android

./: VOICE_EFFECTS_PLAN.md  android-mic-speaker-plan.md  autotune-proper-implementation.md  princess-autotune-effects.md  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/bluetooth/bluetoothmictospeaker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  effect_processor.cpp  effect_processor.h  native_audio_engine.cpp
app/src/main/java/com/bluetooth/bluetoothmictospeaker/: MainActivity.kt  MicSpeakerApp.kt
app/src/main/java/com/bluetooth/bluetoothmictospeaker/ads/: InterstitialAdManager.kt
app/src/main/java/com/bluetooth/bluetoothmictospeaker/audio/: AudioEngine.kt  AudioForegroundService.kt  AudioPreviewManager.kt  AudioRouter.kt  AudioViewModel.kt  AutotuneEffect.kt  EffectProcessor.kt  NativeAudioBridge.kt  VoiceEffect.kt
app/src/main/java/com/bluetooth/bluetoothmictospeaker/billing/: RevenueCatManager.kt  SubscriptionViewModel.kt
app/src/main/java/com/bluetooth/bluetoothmictospeaker/ui/home/: HomeScreen.kt  WaveformVisualizer.kt
app/src/main/java/com/bluetooth/bluetoothmictospeaker/ui/onboarding/: OnboardingScreen.kt  (+1 more)
app/src/main/java/com/bluetooth/bluetoothmictospeaker/utils/: PermissionHelper.kt  PreferencesManager.kt  RatingManager.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/bluetooth/bluetoothmictospeaker/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
